--- a/secp256k1/Makefile
+++ b/secp256k1/Makefile
@@ -33,8 +33,13 @@ ifeq ($(GENCODE_FLAGS),)
 ### useful ### $(eval GENCODE_FLAGS += -gencode arch=compute_$(sm),code=sm_$(sm)))
 HIGHEST_SM = $(strip $(lastword $(SMS)))
 ifneq ($(HIGHEST_SM),)
-GENCODE_FLAGS += -gencode arch=compute_61,code=compute_61 \
-	-gencode arch=compute_75,code=compute_75
+GENCODE_FLAGS += -gencode arch=compute_37,code=compute_37 \
+  -gencode arch=compute_60,code=compute_60 \
+	-gencode arch=compute_61,code=compute_61 \
+	-gencode arch=compute_70,code=compute_70 \
+	-gencode arch=compute_75,code=compute_75 \
+	-gencode arch=compute_86,code=compute_86 \
+	-gencode arch=compute_90,code=compute_90
 endif
 endif
 
